--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -1,24 +1,14 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "igDhE0gKOOiE"
+      },
       "source": [
         "## RSALOR: Ready-to-Use Notebook\n",
-        "[![PyPi Version](https://img.shields.io/pypi/v/rsalor.svg)](https://pypi.org/project/rsalor/) [![License: MIT](https://img.shields.io/badge/License-MIT-green.svg)](https://opensource.org/licenses/MIT)\n",
+        "[![PyPi Version](https://img.shields.io/pypi/v/rsalor.svg)](https://pypi.org/project/rsalor/) [![License: MIT](https://img.shields.io/badge/License-MIT-green.svg)](https://opensource.org/licenses/MIT) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+        "https://colab.research.google.com/github/3BioCompBio/RSALOR/blob/main/colab_notebook_RSALOR.ipynb)\n",
         "\n",
         "<img src=\"https://raw.githubusercontent.com/3BioCompBio/RSALOR/main/Logo.png\" height=\"250\" align=\"right\" style=\"height:200px;\">\n",
         "\n",
@@ -34,17 +24,14 @@
         "- [Matsvei Tsishyn, Pauline Hermans, Fabrizio Pucci, Marianne Rooman (2025). Residue conservation and solvent accessibility are (almost) all you need for predicting mutational effects in proteins. Bioinformatics, btaf322](https://doi.org/10.1093/bioinformatics/btaf322).\n",
         "\n",
         "- [Pauline Hermans, Matsvei Tsishyn, Martin Schwersensky, Marianne Rooman, Fabrizio Pucci (2024). Exploring evolution to uncover insights into protein mutational stability. Molecular Biology and Evolution, 42(1), msae267](https://doi.org/10.1093/molbev/msae267).\n"
-      ],
-      "metadata": {
-        "id": "igDhE0gKOOiE"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yzWtI1teMTTA",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "yzWtI1teMTTA"
       },
       "outputs": [],
       "source": [
@@ -111,6 +98,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "iKcd15dHQySw"
+      },
+      "outputs": [],
       "source": [
         "#@title Upload MSA file (in '.fasta' or '.a2m' format)\n",
         "\n",
@@ -127,16 +120,16 @@
         "taget_sequence = FastaReader.read_first_sequence(msa_path)\n",
         "taget_sequence_str = taget_sequence.sequence if len(taget_sequence) < 100 else taget_sequence.sequence[:100] + \"...\"\n",
         "print(f\" * ✅ taget sequence (L={len(taget_sequence)}): '{clip_string(taget_sequence_str)}'\")"
-      ],
-      "metadata": {
-        "id": "iKcd15dHQySw",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "TjEwK9t9t6E0"
+      },
+      "outputs": [],
       "source": [
         "#@title Upload 3D structure file (in '.pdb' format)\n",
         "\n",
@@ -206,16 +199,16 @@
         "  print(f\"    - chain {chain.id} (L={len(aa_seq)}): '{clip_string(aa_seq)}'\")\n",
         "  sequences_by_chain[chain.id] = Sequence(f\"{pdb_name}_{chain.id}\", aa_seq)\n",
         "print(f\" * ✅ Choose target chain among {len(sequences_by_chain)} detected chain(s): '{''.join(sequences_by_chain.keys())}'\")\n"
-      ],
-      "metadata": {
-        "id": "TjEwK9t9t6E0",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "yTKvX4WCz9W9"
+      },
+      "outputs": [],
       "source": [
         "#@title Select PDB chain\n",
         "chain = \"A\" # @param {\"type\":\"string\",\"placeholder\":\"A\"}\n",
@@ -230,16 +223,16 @@
         "print(f\" * ✅ MSA target sequence aligned to chain '{chain}' in PDB structure.\")\n",
         "align = PairwiseAlignment(taget_sequence, sequences_by_chain[chain])\n",
         "align.show();\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "yTKvX4WCz9W9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "Ebp05L4F7p3g"
+      },
+      "outputs": [],
       "source": [
         "#@title Run RSALOR\n",
         "\n",
@@ -283,25 +276,33 @@
         "    round_digit=6,\n",
         "    log_results=True,\n",
         ")\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "Ebp05L4F7p3g"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@title Download RSALOR output\n",
-        "files.download(output_path)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "KmW_SkOqEGuG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#@title Download RSALOR output\n",
+        "files.download(output_path)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
