correct chains bug in Colab

--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -218,7 +218,7 @@
         "if len(chain) != 1:\n",
         "  raise ValueError(f\"❌ chain='{chain}' should be a string of length 1.\")\n",
         "if chain not in sequences_by_chain:\n",
-        "  raise ValueError(f\"❌ chain='{chain}' not in PDB '{pdb_path}' (among {chains_list})\")\n",
+        "  raise ValueError(f\"❌ chain='{chain}' not in PDB '{pdb_path}' (among '{''.join(sequences_by_chain.keys())}')\")\n",
         "\n",
         "# Show alignments\n",
         "print(f\" * ✅ MSA target sequence aligned to chain '{chain}' in PDB structure.\")\n",
