accept MSA in a3m format

--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -106,7 +106,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Upload MSA file (in '.fasta' or '.a2m' format)\n",
+        "#@title Upload MSA file (in '.fasta', '.a2m' or '.a3m' format)\n",
         "\n",
         "# Drag-and-drop file picker\n",
         "uploaded = files.upload()\n",
