first select structure in Colab notebook

--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -370,6 +370,89 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title 3D Structure options (upload file or fetch from PDB or AlphaFold-DB)\n",
+        "\n",
+        "# Define upload method ---------------------------------------------------------\n",
+        "upload_method = \"upload_local_file\" # @param [\"upload_local_file\",\"fetch_from_pdb\",\"fetch_from_alphafold_db\"]\n",
+        "#@markdown ---------------------------------------------------------------------\n",
+        "retrieval_id = \"\" # @param {\"type\":\"string\",\"placeholder\":\"PDB ID like '6m0j' or UniProt ID like 'Q9LW00'\"}\n",
+        "#@markdown - if using `fetch_from_pdb`, specify a **PDB ID** (like `6m0j`)\n",
+        "#@markdown - if using `fetch_from_alphafold_db`, specify a **UniProt ID** (like `Q9LW00`)\n",
+        "\n",
+        "\n",
+        "# Case: Drag-and-drop local file -----------------------------------------------\n",
+        "pdb_path = None\n",
+        "if upload_method == \"upload_local_file\":\n",
+        "\n",
+        "  # Drag-and-drop file picker\n",
+        "  uploaded = files.upload()\n",
+        "  pdb_path: str = list(uploaded.keys())[0]\n",
+        "\n",
+        "  # Guardian for correct extension\n",
+        "  if not pdb_path.endswith(\".pdb\"):\n",
+        "    pdb_path_failed = pdb_path\n",
+        "    pdb_path = None\n",
+        "    raise ValueError(f\"❌ Uploaded PDB file '{pdb_path_failed}' should have extention '.pdb'.\")\n",
+        "  pdb_name = pdb_path.removesuffix(\".pdb\")\n",
+        "  print(f\" * ✅ PDB file uploaded: '{pdb_path}'\")\n",
+        "\n",
+        "# Case: fetch file from the PDB ------------------------------------------------\n",
+        "elif upload_method == \"fetch_from_pdb\":\n",
+        "\n",
+        "  # retrieval_id not fill error\n",
+        "  if retrieval_id == \"\" or retrieval_id is None:\n",
+        "    raise ValueError(f\"❌ If upload_method='{upload_method}', please specify a retrieval_id.\")\n",
+        "\n",
+        "  # Fetch PDB file\n",
+        "  pdb_path: str = fetch_structure_by_pdb(retrieval_id)\n",
+        "  pdb_name = pdb_path.removesuffix(\".pdb\")\n",
+        "  print(f\" * ✅ PDB file fetched: '{pdb_path}'\")\n",
+        "\n",
+        "# Case: fetch file from the AlphaFold-DB ---------------------------------------\n",
+        "elif upload_method == \"fetch_from_alphafold_db\":\n",
+        "\n",
+        "  # retrieval_id not fill error\n",
+        "  if retrieval_id == \"\" or retrieval_id is None:\n",
+        "    raise ValueError(f\"❌ If upload_method='{upload_method}', please specify a retrieval_id.\")\n",
+        "\n",
+        "  # Fetch PDB file\n",
+        "  pdb_path: str = fetch_structure_by_uniprot(retrieval_id)\n",
+        "  pdb_name = pdb_path.removesuffix(\".pdb\")\n",
+        "  print(f\" * ✅ AF-DB file fetched: '{pdb_path}'\")\n",
+        "\n",
+        "# Case: error ------------------------------------------------------------------\n",
+        "else:\n",
+        "  raise ValueError(f\"❌ Unknown upload_method='{upload_method}'.\")\n",
+        "\n",
+        "# Validate and Log -------------------------------------------------------------\n",
+        "# Parse PDB file\n",
+        "pp_builer = PPBuilder()\n",
+        "structure = PDBParser(QUIET=True).get_structure(\"protein\", pdb_path)\n",
+        "\n",
+        "# Log uploaded PDB file\n",
+        "sequences_by_chain: dict[str, Sequence] = {}\n",
+        "for chain in structure[0]: # loop only on model 1\n",
+        "  aa_seq_segments: list[str] = pp_builer.build_peptides(chain)\n",
+        "  aa_seq: str = \"\".join([str(pp.get_sequence()) for pp in aa_seq_segments]) # concatenate fragments if multiple\n",
+        "  print(f\"    - chain {chain.id} (L={len(aa_seq)}): '{aa_seq}'\")\n",
+        "  sequences_by_chain[chain.id] = Sequence(f\"{pdb_name}_{chain.id}\", aa_seq)\n",
+        "print(f\" * ✅ Choose target chain among {len(sequences_by_chain)} detected chain(s): '{''.join(sequences_by_chain.keys())}'\")\n",
+        "\n",
+        "# Select chain if there is only one\n",
+        "if len(sequences_by_chain) == 1:\n",
+        "  chain = list(sequences_by_chain.keys())[0]\n",
+        "  print(f\" * ✅ Target chain set to: chain='{chain}'\")\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "O6dopoi7ivAf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title MSA options (upload file, fetch from AlphaFold-DB or run MMSeqs2 API)\n",
         "\n",
         "# Define upload method ---------------------------------------------------------\n",
@@ -438,95 +521,12 @@
         "\n",
         "# Validate and Log -------------------------------------------------------------\n",
         "taget_sequence = FastaReader.read_first_sequence(msa_path)\n",
-        "print(f\" * ✅ taget sequence (L={len(taget_sequence)}): '{clip_string(taget_sequence.sequence)}'\")\n",
+        "print(f\" * ✅ taget sequence (L={len(taget_sequence)}): '{taget_sequence.sequence}'\")\n",
         "\n"
       ],
       "metadata": {
         "id": "iKcd15dHQySw",
         "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title 3D Structure options (upload file or fetch from PDB or AlphaFold-DB)\n",
-        "\n",
-        "# Define upload method ---------------------------------------------------------\n",
-        "upload_method = \"upload_local_file\" # @param [\"upload_local_file\",\"fetch_from_pdb\",\"fetch_from_alphafold_db\"]\n",
-        "#@markdown ---------------------------------------------------------------------\n",
-        "retrieval_id = \"\" # @param {\"type\":\"string\",\"placeholder\":\"PDB ID like '6m0j' or UniProt ID like 'Q9LW00'\"}\n",
-        "#@markdown - if using `fetch_from_pdb`, specify a **PDB ID** (like `6m0j`)\n",
-        "#@markdown - if using `fetch_from_alphafold_db`, specify a **UniProt ID** (like `Q9LW00`)\n",
-        "\n",
-        "\n",
-        "# Case: Drag-and-drop local file -----------------------------------------------\n",
-        "pdb_path = None\n",
-        "if upload_method == \"upload_local_file\":\n",
-        "\n",
-        "  # Drag-and-drop file picker\n",
-        "  uploaded = files.upload()\n",
-        "  pdb_path: str = list(uploaded.keys())[0]\n",
-        "\n",
-        "  # Guardian for correct extension\n",
-        "  if not pdb_path.endswith(\".pdb\"):\n",
-        "    pdb_path_failed = pdb_path\n",
-        "    pdb_path = None\n",
-        "    raise ValueError(f\"❌ Uploaded PDB file '{pdb_path_failed}' should have extention '.pdb'.\")\n",
-        "  pdb_name = pdb_path.removesuffix(\".pdb\")\n",
-        "  print(f\" * ✅ PDB file uploaded: '{pdb_path}'\")\n",
-        "\n",
-        "# Case: fetch file from the PDB ------------------------------------------------\n",
-        "elif upload_method == \"fetch_from_pdb\":\n",
-        "\n",
-        "  # retrieval_id not fill error\n",
-        "  if retrieval_id == \"\" or retrieval_id is None:\n",
-        "    raise ValueError(f\"❌ If upload_method='{upload_method}', please specify a retrieval_id.\")\n",
-        "\n",
-        "  # Fetch PDB file\n",
-        "  pdb_path: str = fetch_structure_by_pdb(retrieval_id)\n",
-        "  pdb_name = pdb_path.removesuffix(\".pdb\")\n",
-        "  print(f\" * ✅ PDB file fetched: '{pdb_path}'\")\n",
-        "\n",
-        "# Case: fetch file from the AlphaFold-DB ---------------------------------------\n",
-        "elif upload_method == \"fetch_from_alphafold_db\":\n",
-        "\n",
-        "  # retrieval_id not fill error\n",
-        "  if retrieval_id == \"\" or retrieval_id is None:\n",
-        "    raise ValueError(f\"❌ If upload_method='{upload_method}', please specify a retrieval_id.\")\n",
-        "\n",
-        "  # Fetch PDB file\n",
-        "  pdb_path: str = fetch_structure_by_uniprot(retrieval_id)\n",
-        "  pdb_name = pdb_path.removesuffix(\".pdb\")\n",
-        "  print(f\" * ✅ AF-DB file fetched: '{pdb_path}'\")\n",
-        "\n",
-        "# Case: error ------------------------------------------------------------------\n",
-        "else:\n",
-        "  raise ValueError(f\"❌ Unknown upload_method='{upload_method}'.\")\n",
-        "\n",
-        "# Validate and Log -------------------------------------------------------------\n",
-        "# Parse PDB file\n",
-        "pp_builer = PPBuilder()\n",
-        "structure = PDBParser(QUIET=True).get_structure(\"protein\", pdb_path)\n",
-        "\n",
-        "# Log uploaded PDB file\n",
-        "sequences_by_chain: dict[str, Sequence] = {}\n",
-        "for chain in structure[0]: # loop only on model 1\n",
-        "  aa_seq_segments: list[str] = pp_builer.build_peptides(chain)\n",
-        "  aa_seq: str = \"\".join([str(pp.get_sequence()) for pp in aa_seq_segments]) # concatenate fragments if multiple\n",
-        "  print(f\"    - chain {chain.id} (L={len(aa_seq)}): '{clip_string(aa_seq)}'\")\n",
-        "  sequences_by_chain[chain.id] = Sequence(f\"{pdb_name}_{chain.id}\", aa_seq)\n",
-        "print(f\" * ✅ Choose target chain among {len(sequences_by_chain)} detected chain(s): '{''.join(sequences_by_chain.keys())}'\")\n",
-        "\n",
-        "# Select chain if there is only one\n",
-        "if len(sequences_by_chain) == 1:\n",
-        "  chain = list(sequences_by_chain.keys())[0]\n",
-        "  print(f\" * ✅ Target chain set to: chain='{chain}'\")\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "O6dopoi7ivAf"
       },
       "execution_count": null,
       "outputs": []
@@ -583,9 +583,9 @@
         "theta_regularization = 0.01 # @param {\"type\":\"number\",\"placeholder\":\"0.01\"}\n",
         "#@markdown - regularization term for LOR/LR at amino acid frequencies level\n",
         "seqid_weights = 0.80 # @param {\"type\":\"number\",\"placeholder\":\"0.80\"}\n",
-        "#@markdown - seqid threshold to consider two sequences in the same cluster for weighting (set None to ignore)\n",
+        "#@markdown - seqid threshold to consider two sequences in the same cluster for weighting (leave empty to ignore)\n",
         "min_seqid = 0.35 # @param {\"type\":\"number\",\"placeholder\":\"0.35\"}\n",
-        "#@markdown - discard sequences which seqid with target sequence is below (set None to ignore)\n",
+        "#@markdown - discard sequences which seqid with target sequence is below (leave empty to ignore)\n",
         "num_threads = 2 # @param {\"type\":\"integer\",\"placeholder\":\"2\"}\n",
         "#@markdown - number of threads (CPUs) for weights evaluation (in the C++ backend)\n",
         "\n",
