manage non-standard aas in Colab Notebook

--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -75,9 +75,10 @@
         "import requests\n",
         "from requests import Response\n",
         "from google.colab import files\n",
-        "from Bio.PDB import PDBParser, PPBuilder, PDBList\n",
+        "from Bio.PDB import PDBParser, PDBList\n",
+        "from Bio.PDB.Structure import Structure\n",
         "from rsalor import MSA\n",
-        "from rsalor.sequence import Sequence, FastaReader, PairwiseAlignment\n",
+        "from rsalor.sequence import Sequence, FastaReader, PairwiseAlignment, AminoAcid\n",
         "\n",
         "\n",
         "# Init paths -------------------------------------------------------------------\n",
@@ -93,6 +94,17 @@
         "  \"\"\"Truncate a string and append '...' if it exceeds max_len.\"\"\"\n",
         "  return input_str if len(input_str) <= max_len else input_str[:max_len] + \"...\"\n",
         "\n",
+        "def extract_sequences(structure: Structure, pdb_name: str=\"pdb\") -> dict[str, Sequence]:\n",
+        "  \"\"\"Extract the standardized amino acid sequence for each chain in the PDB Structure (uses only first model).\"\"\"\n",
+        "  sequences_by_chain: dict[str, Sequence] = {}\n",
+        "  for chain in structure[0]: # loop only on model 1\n",
+        "    aa_seq: list[AminoAcid] = []\n",
+        "    for residue in chain:\n",
+        "      aa = AminoAcid.parse_three(residue.resname)\n",
+        "      if aa.is_aminoacid() and not aa.is_unknown():\n",
+        "        aa_seq.append(aa)\n",
+        "    sequences_by_chain[str(chain.id)] = Sequence(f\"{pdb_name}_{chain.id}\", \"\".join(aa.one for aa in aa_seq))\n",
+        "  return sequences_by_chain\n",
         "\n",
         "# Dependencies (fetch functions) -----------------------------------------------\n",
         "def is_valid_pdb_id(pdb_id :str) -> bool:\n",
@@ -426,17 +438,13 @@
         "\n",
         "# Validate and Log -------------------------------------------------------------\n",
         "# Parse PDB file\n",
-        "pp_builer = PPBuilder()\n",
         "structure = PDBParser(QUIET=True).get_structure(\"protein\", pdb_path)\n",
         "\n",
         "# Log uploaded PDB file\n",
-        "sequences_by_chain: dict[str, Sequence] = {}\n",
-        "for chain in structure[0]: # loop only on model 1\n",
-        "  aa_seq_segments: list[str] = pp_builer.build_peptides(chain)\n",
-        "  aa_seq: str = \"\".join([str(pp.get_sequence()) for pp in aa_seq_segments]) # concatenate fragments if multiple\n",
-        "  print(f\"    - chain {chain.id} (L={len(aa_seq)}): '{aa_seq}'\")\n",
-        "  sequences_by_chain[chain.id] = Sequence(f\"{pdb_name}_{chain.id}\", aa_seq)\n",
+        "sequences_by_chain = extract_sequences(structure, pdb_name)\n",
         "print(f\" * ✅ Choose target chain among {len(sequences_by_chain)} detected chain(s): '{''.join(sequences_by_chain.keys())}'\")\n",
+        "for chain, seq in sequences_by_chain.items():\n",
+        "  print(f\"    - chain {chain} (L={len(seq)}): '{seq.sequence}'\")\n",
         "\n",
         "# Select chain if there is only one\n",
         "if len(sequences_by_chain) == 1:\n",
