correct typo in Colab

--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "igDhE0gKOOiE"
+      },
       "source": [
         "## RSALOR: Ready-to-Use Notebook\n",
         "[![PyPi Version](https://img.shields.io/pypi/v/rsalor.svg)](https://pypi.org/project/rsalor/) [![License: MIT](https://img.shields.io/badge/License-MIT-green.svg)](https://opensource.org/licenses/MIT) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
@@ -25,7 +14,7 @@
         "\n",
         "Ready-to-Use Notebook to run the RSALOR model:\n",
         " - Upload or fetch an MSA file\n",
-        " - Uploae or fetch a 3D structure file\n",
+        " - Upload or fetch a 3D structure file\n",
         " - Run predictions on all single-site mutations\n",
         "\n",
         "The `rsalor` package combines structural data (Relative Solvent Accessibility, RSA) and evolutionary data (Log Odd Ratio, LOR from MSA) to evaluate effects of missense mutations in proteins.\n",
@@ -36,32 +25,29 @@
         "- [Matsvei Tsishyn, Pauline Hermans, Fabrizio Pucci, Marianne Rooman (2025). Residue conservation and solvent accessibility are (almost) all you need for predicting mutational effects in proteins. Bioinformatics, btaf322](https://doi.org/10.1093/bioinformatics/btaf322).\n",
         "\n",
         "- [Pauline Hermans, Matsvei Tsishyn, Martin Schwersensky, Marianne Rooman, Fabrizio Pucci (2024). Exploring evolution to uncover insights into protein mutational stability. Molecular Biology and Evolution, 42(1), msae267](https://doi.org/10.1093/molbev/msae267)."
-      ],
-      "metadata": {
-        "id": "igDhE0gKOOiE"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "URoienkLfNsz"
+      },
+      "outputs": [],
       "source": [
         "#@title Install dependencies\n",
         "\n",
         "%pip install rsalor\n",
         "%pip install requests"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "URoienkLfNsz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yzWtI1teMTTA",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "yzWtI1teMTTA"
       },
       "outputs": [],
       "source": [
@@ -381,6 +367,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "O6dopoi7ivAf"
+      },
+      "outputs": [],
       "source": [
         "#@title 3D Structure options (upload file or fetch from PDB or AlphaFold-DB)\n",
         "\n",
@@ -450,16 +442,16 @@
         "if len(sequences_by_chain) == 1:\n",
         "  chain = list(sequences_by_chain.keys())[0]\n",
         "  print(f\" * ✅ Target chain set to: chain='{chain}'\")\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "O6dopoi7ivAf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "iKcd15dHQySw"
+      },
+      "outputs": [],
       "source": [
         "#@title MSA options (upload file, fetch from AlphaFold-DB or run MMSeqs2 API)\n",
         "\n",
@@ -531,16 +523,16 @@
         "taget_sequence = FastaReader.read_first_sequence(msa_path)\n",
         "print(f\" * ✅ taget sequence (L={len(taget_sequence)}): '{taget_sequence.sequence}'\")\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "iKcd15dHQySw",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "yTKvX4WCz9W9"
+      },
+      "outputs": [],
       "source": [
         "#@title Select PDB chain\n",
         "chain = \"\" # @param {\"type\":\"string\",\"placeholder\":\"select a single chains like 'A'\"}\n",
@@ -565,16 +557,16 @@
         "print(f\" * ✅ MSA target sequence aligned to chain '{chain}' in PDB structure.\")\n",
         "align = PairwiseAlignment(taget_sequence, sequences_by_chain[chain])\n",
         "align.show();\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "yTKvX4WCz9W9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "Ebp05L4F7p3g"
+      },
+      "outputs": [],
       "source": [
         "#@title Run RSALOR and Settings\n",
         "\n",
@@ -629,16 +621,16 @@
         "    log_results=False,\n",
         ")\n",
         "\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "Ebp05L4F7p3g"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "KmW_SkOqEGuG"
+      },
+      "outputs": [],
       "source": [
         "#@title Download RSALOR output\n",
         "\n",
@@ -648,13 +640,21 @@
         "\n",
         "# Download\n",
         "files.download(output_path)"
-      ],
-      "metadata": {
-        "id": "KmW_SkOqEGuG",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
