--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -27,6 +27,7 @@
         " - Upload or fetch an MSA file\n",
         " - Upload or fetch a 3D structure file\n",
         " - Run predictions on all single-site mutations\n",
+        " - Visualize results\n",
         "\n",
         "The `rsalor` package combines structural data (Relative Solvent Accessibility, RSA) and evolutionary data (Log Odd Ratio, LOR from MSA) to evaluate effects of missense mutations in proteins.\n",
         "It computes the `RSA*LOR` score for each single-site missense mutation in a target protein by combining multiple computational steps into a fast and user-friendly tool.\n",
@@ -662,10 +663,297 @@
         "  raise ValueError(f\"❌ ERROR: output_path is not set: Please first run RSALOR.\")\n",
         "\n",
         "# Download\n",
-        "files.download(output_path)"
+        "files.download(output_path)\n",
+        "print(f\"✅ RSALOR output file '{output_path}' downloaded.\")"
       ],
       "metadata": {
         "id": "KmW_SkOqEGuG",
+        "cellView": "form"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Heatmap of RSALOR mutational predictions\n",
+        "\n",
+        "\n",
+        "# Input guardians --------------------------------------------------------------\n",
+        "if output_path == \"\" or output_path is None:\n",
+        "  raise ValueError(f\"❌ ERROR: msa object not defined: Please first run RSALOR.\")\n",
+        "\n",
+        "\n",
+        "# Imports ----------------------------------------------------------------------\n",
+        "import shutil\n",
+        "import numpy as np\n",
+        "from numpy.typing import NDArray\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.colors as mcolors\n",
+        "import matplotlib.gridspec as gridspec\n",
+        "\n",
+        "\n",
+        "# Init heatmap folder ----------------------------------------------------------\n",
+        "heatmap_dir = f\"{msa.name}_heatmaps\"\n",
+        "if not os.path.isdir(heatmap_dir):\n",
+        "  os.mkdir(heatmap_dir)\n",
+        "\n",
+        "\n",
+        "# Plot Settings ----------------------------------------------------------------\n",
+        "\n",
+        "# Sizes settings\n",
+        "CELL_SIZE = 60\n",
+        "DPI = 100\n",
+        "MIN_SIZE = 25\n",
+        "RANGE_SIZE = 100\n",
+        "TICKS_FONTSIZE = 20\n",
+        "VAL_FONTSIZE = 12\n",
+        "NOTE_FONTSIZE = 22\n",
+        "\n",
+        "# Colors\n",
+        "color_fill = (0.90, 0.90, 0.90)\n",
+        "\n",
+        "cmap_rsa = mcolors.LinearSegmentedColormap.from_list(\n",
+        "    \"RSA\",\n",
+        "    [\n",
+        "        (0.0, 0.373, 0.451), # burried (deep blue)\n",
+        "        (1.0, 1.0, 1.0),     # eposed (white)\n",
+        "    ],\n",
+        ")\n",
+        "cmap_rsa.set_bad(color=color_fill)\n",
+        "\n",
+        "cmap_gap_ratio = mcolors.LinearSegmentedColormap.from_list(\n",
+        "    \"gap_ratio\",\n",
+        "    [\n",
+        "        (0.000, 0.325, 0.839),  # high confidence, dark blue\n",
+        "        (0.396, 0.796, 0.953),  # medium-high confidence, light blue\n",
+        "        (1.000, 0.859, 0.750),  # medium-low confidence, yellow\n",
+        "        (1.000, 0.490, 0.271),  # low confidence, orange\n",
+        "        (1.000, 0.271, 0.271),  # low confidence, red\n",
+        "    ],\n",
+        ")\n",
+        "cmap_gap_ratio.set_bad(color=color_fill)\n",
+        "\n",
+        "cmap_plddt = mcolors.ListedColormap([\n",
+        "    (1.000, 0.490, 0.271),  # AF-Color 1 (low confidence, orange)\n",
+        "    (1.000, 0.859, 0.750),  # AF-Color 2 (medium-low confidence, yellow)\n",
+        "    (0.396, 0.796, 0.953),  # AF-Color 3 (medium-high confidence, light blue)\n",
+        "    (0.000, 0.325, 0.839)   # AF-Color 4 (high confidence, dark blue)\n",
+        "])\n",
+        "cmap_plddt.set_bad(color=color_fill)\n",
+        "norm_plddt = mcolors.BoundaryNorm([0, 50, 70, 90, 100], cmap_plddt.N)\n",
+        "\n",
+        "cmap = plt.get_cmap('RdBu').reversed()\n",
+        "cmap.set_bad(color=color_fill)\n",
+        "\n",
+        "\n",
+        "# Extract RSALOR values --------------------------------------------------------\n",
+        "\n",
+        "# Base properties\n",
+        "aas = [aa.one for aa in AminoAcid.get_all()]\n",
+        "A = len(aas)\n",
+        "L = msa.length\n",
+        "Ntot = msa.depth\n",
+        "sequence = msa.target_sequence.sequence\n",
+        "\n",
+        "# Log\n",
+        "print(\"Plot Heatmap of RSALOR mutational predictions\")\n",
+        "print(f\" ✅ MSA: '{clip_string(msa.name)}' (L={L}, N={Ntot})\")\n",
+        "\n",
+        "# Extract all values\n",
+        "scores_map = {m[\"mutation_fasta\"]: m for m in rsalor_scores}\n",
+        "plddt = np.full(L, np.nan, dtype=np.float32)\n",
+        "rsa = np.full(L, np.nan, dtype=np.float32)\n",
+        "gap_perc = np.full(L, np.nan, dtype=np.float32)\n",
+        "lor_vector = np.full(L, np.nan, dtype=np.float32)\n",
+        "rsalor_vector = np.full(L, np.nan, dtype=np.float32)\n",
+        "lor_matrix = np.full((A, L), np.nan, dtype=np.float32)\n",
+        "rsalor_matrix = np.full((A, L), np.nan, dtype=np.float32)\n",
+        "for i, wt_aa in enumerate(sequence):\n",
+        "  lor_arr: list[float] = []\n",
+        "  rsalor_arr: list[float] = []\n",
+        "  for j, mt_aa in enumerate(aas):\n",
+        "    mut = f\"{wt_aa}{str(i+1)}{mt_aa}\"\n",
+        "    mut_scores = scores_map[mut]\n",
+        "    plddt[i] = mut_scores[\"pLDDT\"]\n",
+        "    rsa[i] = mut_scores[\"RSA\"]\n",
+        "    gap_perc[i] = mut_scores[\"gap_freq\"] * 100.0\n",
+        "    lor = mut_scores[\"LOR\"]\n",
+        "    rsalor = mut_scores[\"RSA*LOR\"]\n",
+        "    lor_matrix[j, i] = lor\n",
+        "    rsalor_matrix[j, i] = rsalor\n",
+        "    if lor is not None:\n",
+        "      lor_arr.append(lor)\n",
+        "    if rsalor is not None:\n",
+        "      rsalor_arr.append(rsalor)\n",
+        "  if len(lor_arr) > 0:\n",
+        "    lor_vector[i] = np.mean(lor_arr)\n",
+        "  if len(rsalor_arr) > 0:\n",
+        "    rsalor_vector[i] = np.mean(rsalor_arr)\n",
+        "lor_extreme_val = np.nanmax(np.abs(lor_matrix))\n",
+        "rsalor_extreme_val = np.nanmax(np.abs(rsalor_matrix))\n",
+        "\n",
+        "# Plot Heatmap -----------------------------------------------------------------\n",
+        "\n",
+        "# Init\n",
+        "predictions_data = [\n",
+        "    (\"RSALOR\", rsalor_matrix, rsalor_vector, rsalor_extreme_val),\n",
+        "    (\"LOR\", lor_matrix, lor_vector, lor_extreme_val),\n",
+        "]\n",
+        "\n",
+        "# Loop on different predictions (RSALOR and LOR)\n",
+        "for prediction, matrix, mean_vector, extreme_val in predictions_data:\n",
+        "\n",
+        "  # Log\n",
+        "  print(\"\\n-----------------------------------------------------------------------\")\n",
+        "  print(f\"> {prediction}: \")\n",
+        "\n",
+        "  # Compute segments ranges (split heatmap if sequence is too long)\n",
+        "  segments: list[tuple[int, int]] = []\n",
+        "  segment_start = 0\n",
+        "  while segment_start + RANGE_SIZE < L:\n",
+        "      segments.append((segment_start, segment_start + RANGE_SIZE))\n",
+        "      segment_start += RANGE_SIZE\n",
+        "  segments.append((segment_start, L))\n",
+        "\n",
+        "  # Loop on segments\n",
+        "  for n_seg, segment in enumerate(segments):\n",
+        "\n",
+        "    # Get measures on segment\n",
+        "    start, end = segment\n",
+        "    sequence_seg = sequence[start:end]\n",
+        "    L_seg = len(sequence_seg)\n",
+        "    gap_perc_seg = gap_perc[start:end]\n",
+        "    plddt_seg = plddt[start:end]\n",
+        "    rsa_seg = rsa[start:end]\n",
+        "    vector_seg = mean_vector[start:end]\n",
+        "    matrix_seg = matrix[:, start:end]\n",
+        "    SEGMENT_SIZE = RANGE_SIZE\n",
+        "    if len(segments) == 1:\n",
+        "      SEGMENT_SIZE = max(L_seg, MIN_SIZE)\n",
+        "    print(f\"\\n    - Range [{n_seg+1}/{len(segments)}]: {start+1} - {end}\")\n",
+        "\n",
+        "    # Init plot\n",
+        "    fig_width = (SEGMENT_SIZE+9) * CELL_SIZE / DPI\n",
+        "    fig_height = (A+4) * CELL_SIZE / DPI\n",
+        "    fig = plt.figure(figsize=(fig_width*1.01, fig_height*1.10), dpi=DPI)\n",
+        "    gs = gridspec.GridSpec(nrows=5, ncols=1, height_ratios=[1, 1, 1, 1, A])\n",
+        "    ax_gap = fig.add_subplot(gs[0])\n",
+        "    ax_plddt = fig.add_subplot(gs[1])\n",
+        "    ax_rsa = fig.add_subplot(gs[2])\n",
+        "    ax_avg = fig.add_subplot(gs[3])\n",
+        "    ax0 = fig.add_subplot(gs[4])\n",
+        "\n",
+        "    # Plot gap ratio\n",
+        "    ax_gap.set_xticks([])\n",
+        "    ax_gap.set_yticks([0])\n",
+        "    ax_gap.set_yticklabels([\"gap %\"], fontsize=TICKS_FONTSIZE)\n",
+        "    gap_perc_seg_ = np.full(SEGMENT_SIZE, np.nan)\n",
+        "    gap_perc_seg_[:L_seg] = gap_perc_seg\n",
+        "    im_gap = ax_gap.imshow(np.array([gap_perc_seg_]), cmap=cmap_gap_ratio, vmin=0, vmax=100, aspect='equal')\n",
+        "    for i, i_gap in enumerate(gap_perc_seg):\n",
+        "      ax_gap.text(\n",
+        "        i, 0, str(int(i_gap)),\n",
+        "        ha='center', va='center',\n",
+        "        fontsize=VAL_FONTSIZE,\n",
+        "      )\n",
+        "\n",
+        "    # Plot plddt\n",
+        "    ax_plddt.set_xticks([])\n",
+        "    ax_plddt.set_yticks([0])\n",
+        "    ax_plddt.set_yticklabels([\"pLDDT\"], fontsize=TICKS_FONTSIZE)\n",
+        "    plddt_seg_ = np.full(SEGMENT_SIZE, np.nan)\n",
+        "    plddt_seg_[:L_seg] = plddt_seg\n",
+        "    im_plddt = ax_plddt.imshow(np.array([plddt_seg_]), cmap=cmap_plddt, norm=norm_plddt, aspect='equal')\n",
+        "    for i, i_plddt in enumerate(plddt_seg):\n",
+        "      if np.isnan(i_plddt): continue\n",
+        "      ax_plddt.text(\n",
+        "        i, 0, str(int(i_plddt)),\n",
+        "        ha='center', va='center',\n",
+        "        fontsize=VAL_FONTSIZE,\n",
+        "      )\n",
+        "\n",
+        "    # Plot RSA\n",
+        "    ax_rsa.set_xticks([])\n",
+        "    ax_rsa.set_yticks([0])\n",
+        "    ax_rsa.set_yticklabels([\"RSA\"], fontsize=TICKS_FONTSIZE)\n",
+        "    rsa_seg_ = np.full(SEGMENT_SIZE, np.nan)\n",
+        "    rsa_seg_[:L_seg] = rsa_seg\n",
+        "    im_rsa = ax_rsa.imshow(np.array([rsa_seg_]), cmap=cmap_rsa, vmin=0, vmax=100, aspect='equal')\n",
+        "    for i, i_rsa in enumerate(rsa_seg):\n",
+        "      if np.isnan(i_rsa): continue\n",
+        "      ax_rsa.text(\n",
+        "        i, 0, str(int(i_rsa)),\n",
+        "        ha='center', va='center',\n",
+        "        fontsize=VAL_FONTSIZE,\n",
+        "      )\n",
+        "\n",
+        "    # Plot average\n",
+        "    ax_avg.set_xticks([])\n",
+        "    ax_avg.set_yticks([0])\n",
+        "    ax_avg.set_yticklabels([\"Mean\"], fontsize=TICKS_FONTSIZE)\n",
+        "    vector_seg_ = np.full(SEGMENT_SIZE, np.nan)\n",
+        "    vector_seg_[:L_seg] = vector_seg\n",
+        "    im_avg = ax_avg.imshow(np.array([vector_seg_]), cmap=cmap, vmin=-extreme_val, vmax=extreme_val, aspect='equal')\n",
+        "    for i, i_avg in enumerate(vector_seg):\n",
+        "      if np.isnan(i_avg): continue\n",
+        "      ax_avg.text(\n",
+        "        i, 0, f\"{i_avg:.1f}\",\n",
+        "        ha='center', va='center',\n",
+        "        fontsize=VAL_FONTSIZE,\n",
+        "      )\n",
+        "\n",
+        "    # Plot sdca values\n",
+        "    matrix_img = np.full((A, SEGMENT_SIZE), np.nan, dtype=np.float32)\n",
+        "    for i, wt_aa in enumerate(sequence_seg):\n",
+        "      for j, mt_aa in enumerate(aas):\n",
+        "        if wt_aa == mt_aa:\n",
+        "          x = \"-\"\n",
+        "          matrix_img[j, i] = np.nan\n",
+        "        else:\n",
+        "          matrix_img[j, i] = matrix_seg[j, i]\n",
+        "          x_float = matrix_seg[j, i]\n",
+        "          if np.isnan(x_float): continue\n",
+        "          x = f\"{x_float:.1f}\"\n",
+        "        ax0.text(\n",
+        "          i, j, x,\n",
+        "          ha='center', va='center',\n",
+        "          fontsize=VAL_FONTSIZE,\n",
+        "        )\n",
+        "    im0 = ax0.imshow(matrix_img, cmap=cmap, vmin=-extreme_val, vmax=extreme_val, aspect='equal')\n",
+        "    ax0.set_xticks([i for i in range(len(sequence_seg))])\n",
+        "    ax0.set_xticklabels([f\"{sequence_seg[i]} {str(start+i+1)}\" for i in range(len(sequence_seg))], rotation=90, fontsize=TICKS_FONTSIZE)\n",
+        "    ax0.set_yticks([i for i in range(A)])\n",
+        "    ax0.set_yticklabels([aa for aa in aas], fontsize=TICKS_FONTSIZE)\n",
+        "\n",
+        "    # Save plot\n",
+        "    heatmap_path = os.path.join(heatmap_dir, f\"{msa.name}_{prediction}_seg{n_seg+1}.png\")\n",
+        "    plot_msg = (\n",
+        "      f\"{prediction}\\n\"\n",
+        "      f\" * {clip_string(msa.name, 50)}\\n\"\n",
+        "      f\" * MSA: $L={L}$, $N={Ntot}$\\n\"\n",
+        "      f\" * Range [{n_seg+1}/{len(segments)}]: {start+1} - {end}\"\n",
+        "    )\n",
+        "    plt.text(-5.0, 16.0, plot_msg, rotation=90, fontsize=NOTE_FONTSIZE, linespacing=1.5)\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(heatmap_path, dpi=DPI)\n",
+        "    plt.show()\n",
+        "    plt.close();\n",
+        "    print(f\"    - file saved to '{heatmap_path}' ✅\")\n",
+        "\n",
+        "\n",
+        "# Zip and download heatmaps ----------------------------------------------------\n",
+        "\n",
+        "# Zip heatmaps directory\n",
+        "shutil.make_archive(heatmap_dir, \"zip\", heatmap_dir)\n",
+        "\n",
+        "# Download\n",
+        "heatmap_zip_path = f\"{heatmap_dir}.zip\"\n",
+        "files.download(heatmap_zip_path)\n",
+        "print(f\"\\n✅ RSALOR heatmaps plots '{heatmap_zip_path}' downloaded.\")\n"
+      ],
+      "metadata": {
+        "id": "Ferrf-fsn6qA",
         "cellView": "form"
       },
       "execution_count": null,
