Add 3D viewer to Colab

--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -44,21 +44,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@title Install dependencies\n",
-        "\n",
-        "%pip install rsalor\n",
-        "%pip install requests"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "URoienkLfNsz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "yzWtI1teMTTA",
@@ -66,7 +51,11 @@
       },
       "outputs": [],
       "source": [
-        "#@title Imports and utility functions\n",
+        "#@title Install and Import dependencies\n",
+        "\n",
+        "# Install ----------------------------------------------------------------------\n",
+        "%pip install rsalor\n",
+        "\n",
         "\n",
         "# Imports ----------------------------------------------------------------------\n",
         "import os\n",
@@ -592,7 +581,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Run RSALOR and Settings\n",
+        "#@title Run RSALOR\n",
         "\n",
         "# Output settings\n",
         "#@markdown ### Output settings\n",
@@ -600,6 +589,9 @@
         "#@markdown - leave empty for auto\n",
         "sep = \",\" # @param {\"type\":\"string\",\"placeholder\":\"CSV separator like ',' or ';'\"}\n",
         "#@markdown - separator in output CSV file\n",
+        "download_output = True # @param {\"type\":\"boolean\"}\n",
+        "#@markdown - automatically download output CSV file\n",
+        "\n",
         "\n",
         "# RSALOR run settings\n",
         "#@markdown ---------------------------------------------------------------------\n",
@@ -642,8 +634,13 @@
         "    output_path,\n",
         "    sep=sep,\n",
         "    round_digit=6,\n",
-        "    log_results=False,\n",
+        "    log_results=True,\n",
         ")\n",
+        "\n",
+        "# Download\n",
+        "if download_output:\n",
+        "  files.download(output_path)\n",
+        "  print(f\"\\n✅ RSALOR output file '{output_path}' downloaded.\")\n",
         "\n"
       ],
       "metadata": {
@@ -656,27 +653,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Download RSALOR output\n",
-        "\n",
-        "# Input guardians\n",
-        "if output_path == \"\" or output_path is None:\n",
-        "  raise ValueError(f\"❌ ERROR: output_path is not set: Please first run RSALOR.\")\n",
-        "\n",
-        "# Download\n",
-        "files.download(output_path)\n",
-        "print(f\"✅ RSALOR output file '{output_path}' downloaded.\")"
-      ],
-      "metadata": {
-        "id": "KmW_SkOqEGuG",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@title Heatmap of RSALOR mutational predictions\n",
+        "\n",
+        "# User input -------------------------------------------------------------------\n",
+        "download_heatmaps = True # @param {\"type\":\"boolean\"}\n",
+        "#@markdown - automatically download heatmaps\n",
         "\n",
         "\n",
         "# Input guardians --------------------------------------------------------------\n",
@@ -727,7 +708,7 @@
         "    [\n",
         "        (0.000, 0.325, 0.839),  # high confidence, dark blue\n",
         "        (0.396, 0.796, 0.953),  # medium-high confidence, light blue\n",
-        "        (1.000, 0.859, 0.750),  # medium-low confidence, yellow\n",
+        "        (1.000, 0.859, 0.075),  # medium-low confidence, yellow\n",
         "        (1.000, 0.490, 0.271),  # low confidence, orange\n",
         "        (1.000, 0.271, 0.271),  # low confidence, red\n",
         "    ],\n",
@@ -736,7 +717,7 @@
         "\n",
         "cmap_plddt = mcolors.ListedColormap([\n",
         "    (1.000, 0.490, 0.271),  # AF-Color 1 (low confidence, orange)\n",
-        "    (1.000, 0.859, 0.750),  # AF-Color 2 (medium-low confidence, yellow)\n",
+        "    (1.000, 0.859, 0.075),  # AF-Color 2 (medium-low confidence, yellow)\n",
         "    (0.396, 0.796, 0.953),  # AF-Color 3 (medium-high confidence, light blue)\n",
         "    (0.000, 0.325, 0.839)   # AF-Color 4 (high confidence, dark blue)\n",
         "])\n",
@@ -944,17 +925,208 @@
         "\n",
         "# Zip and download heatmaps ----------------------------------------------------\n",
         "\n",
-        "# Zip heatmaps directory\n",
-        "shutil.make_archive(heatmap_dir, \"zip\", heatmap_dir)\n",
+        "if download_heatmaps:\n",
+        "  # Zip heatmaps directory\n",
+        "  shutil.make_archive(heatmap_dir, \"zip\", heatmap_dir)\n",
         "\n",
-        "# Download\n",
-        "heatmap_zip_path = f\"{heatmap_dir}.zip\"\n",
-        "files.download(heatmap_zip_path)\n",
-        "print(f\"\\n✅ RSALOR heatmaps plots '{heatmap_zip_path}' downloaded.\")\n"
+        "  # Download\n",
+        "  heatmap_zip_path = f\"{heatmap_dir}.zip\"\n",
+        "  files.download(heatmap_zip_path)\n",
+        "  print(f\"\\n✅ RSALOR heatmaps plots '{heatmap_zip_path}' downloaded.\")\n"
       ],
       "metadata": {
         "id": "Ferrf-fsn6qA",
         "cellView": "form"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title 3D Viewer\n",
+        "\n",
+        "\n",
+        "# User input -------------------------------------------------------------------\n",
+        "#@markdown ### Color residues by:\n",
+        "metric = \"RSALOR\" # @param [\"RSALOR\",\"LOR\", \"RSA\", \"pLDDT\", \"gap_freq\"]\n",
+        "\n",
+        "\n",
+        "# Input guardians --------------------------------------------------------------\n",
+        "if output_path == \"\" or output_path is None:\n",
+        "  raise ValueError(f\"❌ ERROR: msa object not defined: Please first run RSALOR.\")\n",
+        "\n",
+        "\n",
+        "# Install and Imports ----------------------------------------------------------\n",
+        "try:\n",
+        "    import py3Dmol\n",
+        "except ImportError:\n",
+        "    %pip install py3Dmol\n",
+        "    import py3Dmol\n",
+        "import numpy as np\n",
+        "from matplotlib import pyplot as plt\n",
+        "import matplotlib.cm as cm\n",
+        "import matplotlib.colors as mcolors\n",
+        "\n",
+        "\n",
+        "# Extract RSALOR values --------------------------------------------------------\n",
+        "\n",
+        "# Log\n",
+        "all_chains = \"\".join(list(sequences_by_chain.keys()))\n",
+        "print(f\"Display {metric} for 3D Structure: '{clip_string(pdb_name)}' ✅\")\n",
+        "print(f\" * MSA:          '{msa.name}'\")\n",
+        "print(f\" * Output name:  '{output_name}'\")\n",
+        "print(f\" * target chain: '{chain}'\")\n",
+        "print(f\" * all chains:   '{all_chains}'\")\n",
+        "\n",
+        "# Extract maps\n",
+        "rsalor_map: dict[str, float] = {}\n",
+        "lor_map: dict[str, float] = {}\n",
+        "rsa_map: dict[str, float] = {}\n",
+        "plddt_map: dict[str, float] = {}\n",
+        "gap_freq_map: dict[str, float] = {}\n",
+        "for mutation_entry in rsalor_scores:\n",
+        "  mut = mutation_entry[\"mutation_pdb\"]\n",
+        "  if mut == \"XXX\" or mut == \"\" or mut is None:\n",
+        "    continue\n",
+        "  resid = mut[1:-1]\n",
+        "  rsalor = mutation_entry[\"RSA*LOR\"]\n",
+        "  lor = mutation_entry[\"LOR\"]\n",
+        "  rsa = mutation_entry[\"RSA\"]\n",
+        "  plddt = mutation_entry[\"pLDDT\"]\n",
+        "  gap_freq = mutation_entry[\"gap_freq\"]\n",
+        "  if rsalor is not None:\n",
+        "    if resid not in rsalor_map:\n",
+        "      rsalor_map[resid] = []\n",
+        "    rsalor_map[resid].append(rsalor)\n",
+        "  if lor is not None:\n",
+        "    if resid not in lor_map:\n",
+        "      lor_map[resid] = []\n",
+        "    lor_map[resid].append(lor)\n",
+        "  if rsa is not None:\n",
+        "    rsa_map[resid] = rsa\n",
+        "  if plddt is not None:\n",
+        "    plddt_map[resid] = plddt\n",
+        "  if gap_freq is not None:\n",
+        "    gap_freq_map[resid] = gap_freq\n",
+        "rsalor_map = {k: np.mean(v) for k, v in rsalor_map.items()}\n",
+        "lor_map = {k: np.mean(v) for k, v in lor_map.items()}\n",
+        "rsalor_extreme_val = np.max(np.abs(list(rsalor_map.values())))\n",
+        "lor_extreme_val = np.max(np.abs(list(lor_map.values())))\n",
+        "\n",
+        "\n",
+        "# Colors Settings --------------------------------------------------------------\n",
+        "color_other_chains = (0.70, 0.70, 0.70)\n",
+        "color_target_chain = (0.50, 0.50, 0.50)\n",
+        "\n",
+        "cmap_rsalor = plt.get_cmap('RdBu').reversed()\n",
+        "cmap_rsalor.set_bad(color=color_fill)\n",
+        "norm_rsalor = mcolors.Normalize(vmin=-rsalor_extreme_val, vmax=rsalor_extreme_val, clip=True)\n",
+        "\n",
+        "cmap_lor = plt.get_cmap('RdBu').reversed()\n",
+        "cmap_lor.set_bad(color=color_fill)\n",
+        "norm_lor = mcolors.Normalize(vmin=-lor_extreme_val, vmax=lor_extreme_val, clip=True)\n",
+        "\n",
+        "cmap_rsa = mcolors.LinearSegmentedColormap.from_list(\n",
+        "    \"RSA\",\n",
+        "    [\n",
+        "        (0.0, 0.373, 0.451), # burried (deep blue)\n",
+        "        (1.0, 1.0, 1.0),     # eposed (white)\n",
+        "    ],\n",
+        ")\n",
+        "cmap_rsa.set_bad(color=color_target_chain)\n",
+        "norm_rsa = mcolors.Normalize(vmin=0.0, vmax=100.0, clip=True)\n",
+        "\n",
+        "cmap_gap_freq = mcolors.LinearSegmentedColormap.from_list(\n",
+        "    \"gap_freq\",\n",
+        "    [\n",
+        "        (0.000, 0.325, 0.839),  # high confidence, dark blue\n",
+        "        (0.396, 0.796, 0.953),  # medium-high confidence, light blue\n",
+        "        (1.000, 0.859, 0.075),  # medium-low confidence, yellow\n",
+        "        (1.000, 0.490, 0.271),  # low confidence, orange\n",
+        "        (1.000, 0.271, 0.271),  # low confidence, red\n",
+        "    ],\n",
+        ")\n",
+        "cmap_gap_freq.set_bad(color=color_target_chain)\n",
+        "norm_gap_freq = mcolors.Normalize(vmin=0.0, vmax=1.0)\n",
+        "\n",
+        "cmap_plddt = mcolors.ListedColormap([\n",
+        "    (1.000, 0.490, 0.271),  # AF-Color 1 (low confidence, orange)\n",
+        "    (1.000, 0.859, 0.075),  # AF-Color 2 (medium-low confidence, yellow)\n",
+        "    (0.396, 0.796, 0.953),  # AF-Color 3 (medium-high confidence, light blue)\n",
+        "    (0.000, 0.325, 0.839)   # AF-Color 4 (high confidence, dark blue)\n",
+        "])\n",
+        "cmap_plddt.set_bad(color=color_target_chain)\n",
+        "norm_plddt = mcolors.BoundaryNorm([0, 50, 70, 90, 100], cmap_plddt.N)\n",
+        "\n",
+        "\n",
+        "# 3D viewer --------------------------------------------------------------------\n",
+        "\n",
+        "# Select values map and color scale\n",
+        "values_map = {\n",
+        "  \"RSALOR\": (\n",
+        "      rsalor_map, cmap_rsalor, norm_rsalor,\n",
+        "      \"0 is neutral, higher values are deleterious / destabilizing\",\n",
+        "    ),\n",
+        "  \"LOR\": (\n",
+        "      lor_map, cmap_lor, norm_lor,\n",
+        "      \"0 is neutral, higher values are deleterious / destabilizing\",\n",
+        "    ),\n",
+        "  \"RSA\": (\n",
+        "      rsa_map, cmap_rsa, norm_rsa,\n",
+        "      \"0 is fully burried, 100 is fully exposed\",\n",
+        "    ),\n",
+        "  \"pLDDT\": (\n",
+        "      plddt_map, cmap_plddt, norm_plddt,\n",
+        "      \"higher values are better \\n(if structure is AlphaFold or similar model, otherwise it is B-factor)\",\n",
+        "    ),\n",
+        "  \"gap_freq\": (\n",
+        "      gap_freq_map, cmap_gap_freq, norm_gap_freq,\n",
+        "      \"0 means no gaps, 1 means all gaps\",\n",
+        "    ),\n",
+        "}\n",
+        "residue_values, cmap, norm, scale_comment = values_map[metric]\n",
+        "\n",
+        "# Compute colors map\n",
+        "residue_colors = {\n",
+        "  resid: mcolors.to_hex(cmap(norm(v)))\n",
+        "  for resid, v in residue_values.items()\n",
+        "}\n",
+        "\n",
+        "# Plot color scale\n",
+        "vmin, vmid, vmax = norm.vmin, (norm.vmin + norm.vmax) / 2.0, norm.vmax\n",
+        "gradient = np.linspace(vmin, vmax, 100+1).reshape(1, -1)\n",
+        "fig, ax = plt.subplots(figsize=(5, 0.25))\n",
+        "im = ax.imshow(gradient, aspect=\"auto\", cmap=cmap, norm=norm)\n",
+        "ax.set_yticks([])\n",
+        "ax.set_xticks([0, 50, 100], [f\"{vmin:.2f}\", f\"{vmid:.2f}\" ,f\"{vmax:.2f}\"])\n",
+        "ax.set_title(scale_comment, fontsize=10)\n",
+        "plt.show()\n",
+        "print(\"\")\n",
+        "\n",
+        "# 3D viewer\n",
+        "with open(pdb_path, \"r\") as fs:\n",
+        "  pdb_data = fs.read()\n",
+        "view = py3Dmol.view(data=pdb_data)\n",
+        "view.setStyle(\n",
+        "  {'cartoon': {'color': mcolors.to_hex(color_other_chains)}}\n",
+        ")\n",
+        "view.setStyle(\n",
+        "  {'chain': chain},\n",
+        "  {'cartoon': {'color': mcolors.to_hex(color_target_chain)}}\n",
+        ")\n",
+        "for resid, color in residue_colors.items():\n",
+        "  chain, res_position = resid[0], resid[1:]\n",
+        "  view.setStyle(\n",
+        "    {'chain': chain, 'resi': res_position},\n",
+        "    {'cartoon': {'color': color}}\n",
+        "  )\n",
+        "view.zoomTo()\n",
+        "view.show()\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "k8yj3OYlUEsM"
       },
       "execution_count": null,
       "outputs": []
