Add sticks to Colab 3D viewer

--- a/colab_notebook_RSALOR.ipynb
+++ b/colab_notebook_RSALOR.ipynb
@@ -657,7 +657,6 @@
         "\n",
         "# User input -------------------------------------------------------------------\n",
         "download_heatmaps = True # @param {\"type\":\"boolean\"}\n",
-        "#@markdown - automatically download heatmaps\n",
         "\n",
         "\n",
         "# Input guardians --------------------------------------------------------------\n",
@@ -950,7 +949,10 @@
         "# User input -------------------------------------------------------------------\n",
         "#@markdown ### Color residues by:\n",
         "metric = \"RSALOR\" # @param [\"RSALOR\",\"LOR\", \"RSA\", \"pLDDT\", \"gap_freq\"]\n",
-        "\n",
+        "#@markdown ---------------------------------------------------------------------\n",
+        "#@markdown ### Display settings\n",
+        "show_sticks = True # @param {\"type\":\"boolean\"}\n",
+        "sticks_radius = 0.15 # @param {\"type\":\"number\",\"placeholder\":\"a positive number like: 0.15\"}\n",
         "\n",
         "# Input guardians --------------------------------------------------------------\n",
         "if output_path == \"\" or output_path is None:\n",
@@ -1020,11 +1022,11 @@
         "color_target_chain = (0.50, 0.50, 0.50)\n",
         "\n",
         "cmap_rsalor = plt.get_cmap('RdBu').reversed()\n",
-        "cmap_rsalor.set_bad(color=color_fill)\n",
+        "cmap_rsalor.set_bad(color=color_target_chain)\n",
         "norm_rsalor = mcolors.Normalize(vmin=-rsalor_extreme_val, vmax=rsalor_extreme_val, clip=True)\n",
         "\n",
         "cmap_lor = plt.get_cmap('RdBu').reversed()\n",
-        "cmap_lor.set_bad(color=color_fill)\n",
+        "cmap_lor.set_bad(color=color_target_chain)\n",
         "norm_lor = mcolors.Normalize(vmin=-lor_extreme_val, vmax=lor_extreme_val, clip=True)\n",
         "\n",
         "cmap_rsa = mcolors.LinearSegmentedColormap.from_list(\n",
@@ -1111,16 +1113,30 @@
         "view.setStyle(\n",
         "  {'cartoon': {'color': mcolors.to_hex(color_other_chains)}}\n",
         ")\n",
+        "if show_sticks:\n",
+        "  view.addStyle(\n",
+        "    {'stick': {'color': mcolors.to_hex(color_other_chains), 'radius': sticks_radius}}\n",
+        "  )\n",
         "view.setStyle(\n",
         "  {'chain': chain},\n",
         "  {'cartoon': {'color': mcolors.to_hex(color_target_chain)}}\n",
         ")\n",
+        "if show_sticks:\n",
+        "  view.addStyle(\n",
+        "    {'chain': chain},\n",
+        "    {'stick': {'color': mcolors.to_hex(color_target_chain), 'radius': sticks_radius}}\n",
+        "  )\n",
         "for resid, color in residue_colors.items():\n",
         "  chain, res_position = resid[0], resid[1:]\n",
         "  view.setStyle(\n",
         "    {'chain': chain, 'resi': res_position},\n",
         "    {'cartoon': {'color': color}}\n",
         "  )\n",
+        "  if show_sticks:\n",
+        "    view.addStyle(\n",
+        "      {'chain': chain, 'resi': res_position},\n",
+        "      {'stick': {'color': color, 'radius': sticks_radius}}\n",
+        "    )\n",
         "view.zoomTo()\n",
         "view.show()\n"
       ],
